# Complex-step-Newton-method

./: LICENSE  MANIFEST.in  README.md  cnewton.ipynb  pyproject.toml  setup.py
.github/workflows/: csnewton.yml
Files/Matlab_nleqs/: cnewton.m
Files/Matlab_odes/: f.m
Matlab_nleqs/: cnewton.m  f.m  main.m  mv.m
Matlab_odes/: cnewton.m  f.m  main.m
csnewton/: README.md  setup.py
csnewton/src/csnewton/: __init__.py  _csnewton.cpp  csnewton.hpp
src/csnewton/: csnewton.hpp
