[build-system]
requires = ["setuptools>=64", "pybind11>=2.11", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csnewton"
version = "1.0.0"
description = "Newton-GMRES/LGMRES solver using the complex-step Jacobian-vector product"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Dimitrios Mitsotakis", email = "dmitsot@gmail.com" }
]
keywords = ["newton", "gmres", "lgmres", "krylov", "numerical methods", "scientific computing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.urls]
Paper = "https://link.springer.com/article/10.1007/s00211-025-01471-w"

[tool.setuptools.packages.find]
where = ["src"]
